# dev-skills-marketplace

./: README.md
dev-skills-marketplace/: QUICK_START.md
dev-skills-marketplace/skills/database-seeding/: SKILL.md
dev-skills-marketplace/skills/database-seeding/scripts/: seed.ts
dev-skills-marketplace/skills/env-manager/: SKILL.md
dev-skills-marketplace/skills/env-manager/assets/: env-templates.txt
dev-skills-marketplace/skills/git-hooks/: SKILL.md
dev-skills-marketplace/skills/git-hooks/scripts/: setup-hooks.sh
dev-skills-marketplace/skills/local-ssl/scripts/: setup-ssl.sh
dev-skills-marketplace/skills/zero-to-running/assets/: env-example.txt
dev-skills-marketplace/skills/zero-to-running/scripts/: dev-down.sh  dev-up.sh
devEnv/dev-skills-marketplace/: .gitignore  INSTALL.md  README.md
devEnv/dev-skills-marketplace/.claude-plugin/: marketplace.json  plugin.json
devEnv/dev-skills-marketplace/dev-skills-plugin/: README.md
devEnv/dev-skills-marketplace/skills/zero-to-running/assets/: Makefile.txt  docker-compose.yml
devEnv/react-node-postgres-redis/: README.md
projects/canvas/: .gitignore  Cargo.toml  Collaboration & Sync Research Notes.md  Figma Architecture Research Notes.md  Infinite Canvas Tutorial Structure (infinitecanvas.cc).md  Technical Architecture Plan_ Collaborative Infinite Canvas.md
projects/canvas/.beads/: issues.jsonl
projects/canvas/.cargo/: config.toml
projects/canvas/contracts/: document-schema.rs  index.ts  wasm-api.ts  websocket-protocol.ts
projects/canvas/crates/canvas-core/: Cargo.toml
projects/canvas/crates/canvas-core/src/: camera.rs  engine.rs  input.rs  lib.rs  renderer.rs  scene.rs  text.rs  tools.rs
projects/canvas/crates/canvas-core/src/ecs/: components.rs  hierarchy.rs  mod.rs  systems.rs
projects/canvas/crates/canvas-core/src/shaders/: shape.wgsl  text.wgsl
projects/canvas/crates/canvas-schema/: Cargo.toml
projects/canvas/crates/canvas-schema/src/: document.rs  lib.rs  objects.rs  types.rs  utils.rs
projects/canvas/crates/canvas-wasm/: Cargo.toml  build.sh  test.html
projects/canvas/crates/canvas-wasm/src/: bindings.rs  lib.rs  utils.rs
projects/canvas/crates/sync-server/: Cargo.toml
projects/canvas/crates/sync-server/src/: document.rs  handler.rs  lib.rs  main.rs  protocol.rs  server.rs  session.rs
projects/dale/autobio/: .gitignore  README.md  package.json  pnpm-lock.yaml  test-e2e.js  tsconfig.tsbuildinfo  turbo.json
projects/dale/autobio/apps/api/: .dev.vars.example  package.json  tsconfig.json  wrangler.toml
projects/dale/autobio/apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  wrangler.toml
projects/dale/autobio/docs/: PRD-demo-video-30-second.md
projects/dale/autobio/infrastructure/migrations/: 0001_initial_schema.sql
projects/dale/autobio/scripts/: deploy.sh  setup.sh
projects/dale/autobio/test-data/: douglass_narrative.txt  grant_memoirs.txt
projects/dale/autobio/workers/analyze/: package.json  tsconfig.json  tsconfig.tsbuildinfo  wrangler.toml
projects/dale/autobio/workers/parse/: package.json  tsconfig.tsbuildinfo  wrangler.toml
projects/dale/autobio/workers/write/: package.json  tsconfig.tsbuildinfo  wrangler.toml
projects/manos/: Terminal_Subsystem_Execution_Spec_v2.md  create_project.rb  iOS_Agent_Observability_App_Execution_Spec_v2_aligned_updated.md
projects/manos/.scud/spawn/: scud-main.json  scud-test.json
projects/manos/.scud/tasks/: tasks.scg
projects/manos/AgentObservability.xcodeproj/: project.pbxproj
projects/manos/AgentObservability.xcodeproj/xcshareddata/xcschemes/: AgentObservability.xcscheme
projects/manos/Sources/App/: AgentObsApp.swift  ContentView.swift
projects/manos/Sources/App/Navigation/: AppNavigation.swift
projects/manos/Sources/Core/DI/: Container.swift
projects/manos/Sources/Core/FeatureFlags/: FeatureFlags.swift
projects/manos/Sources/Core/Logging/: Logger.swift
projects/manos/Sources/Core/Utilities/: Extensions.swift
projects/manos/Sources/Data/API/: APIClient.swift
projects/manos/Sources/Data/Persistence/: DataStore.swift
projects/manos/Sources/Data/Realtime/: WebSocketClient.swift
projects/manos/Sources/Domain/Entities/: Agent.swift  ApprovalGate.swift  Incident.swift  Swarm.swift
projects/manos/Sources/Domain/UseCases/: ControlAction.swift
projects/manos/Sources/Features/AgentDetail/: AgentDetailView.swift
projects/manos/Sources/Features/ApprovalGates/: ApprovalGatesView.swift
projects/manos/Sources/Features/ContextHealth/: ContextHealthView.swift
projects/manos/Sources/Features/LiveTrace/: LiveTraceView.swift
projects/manos/Sources/Features/Overview/: OverviewView.swift
projects/manos/Sources/Features/SkillHealth/: SkillHealthView.swift
projects/manos/Sources/Features/Swarms/: SwarmHealthView.swift
projects/manos/Sources/Features/TerminalSessions/: TerminalSessionsView.swift
projects/manos/Sources/Services/Auth/: AuthService.swift
projects/manos/Sources/Services/Push/: PushService.swift
projects/manos/Sources/Services/Security/: BiometricService.swift
projects/manos/Sources/Services/Terminal/: TerminalOrchestrator.swift  TerminalService.swift
projects/manos/Tests/AppTests/: AgentObsAppTests.swift
projects/manos/Tests/CoreTests/: DIContainerTests.swift
projects/manos/Tests/TerminalTests/: TerminalModelsTests.swift
(+40 files in other folders)
