[package]
name = "canvas-core"
description = "Core canvas engine with wgpu rendering and ECS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
canvas-schema = { path = "../canvas-schema" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
bevy_ecs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
automerge = { workspace = true }
ulid = { workspace = true }
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
raw-window-handle = "0.6"
