[package]
name = "canvas-schema"
description = "Shared types and document schema for the Canvas engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
automerge = { workspace = true }
ulid = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
