[package]
name = "canvas-wasm"
description = "WebAssembly bindings for the canvas engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canvas-core = { path = "../canvas-core" }
canvas-schema = { path = "../canvas-schema" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
log = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }

# WASM target dependencies - enable JS random for getrandom 0.3
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
