[package]
name = "sync-server"
description = "Real-time collaboration server for canvas documents"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sync-server"
path = "src/main.rs"

[dependencies]
canvas-schema = { path = "../canvas-schema" }
tokio = { workspace = true }
futures = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
automerge = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
